<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AideMemoire</string>
    
    <string name="infosfragment_title">RECAPITULATIF</string>
    <string name="addfragment_title">AJOUT</string>
    <string name="editfragment_title">EDITION</string>
    
    <string name="form_name">Nom</string>
    <string name="form_surname">Prénom</string>
    <string name="form_sum">Somme</string>
    <string name="form_plus">+</string>
    <string name="form_minus">-</string>
    <string name="form_date">Date</string>
    <string name="form_button_add">Ajouter</string>
    <string name="form_button_edit">Editer</string>
    <string name="form_button_cancel">Annuler</string>
    <string name="error_placeholder">Ce champ est obligatoire</string>
    
    <string name="default_listview_content">Ajouter un champ</string>
    
    <string name="header_name">NOM</string>
    <string name="header_surname">PRENOM</string>
    <string name="header_sum">SOMME</string>
    <string name="header_date">DATE</string>
    
    <string name="menu_filter">Filtrer par</string>
    <string name="menu_sort">Trier par</string>
    <string name="menu_reset">Reset</string>
    
    <string name="filter_dialog_title">Filtrer par</string>
    <string name="filter_dialog_OK">OK</string>
    <string name="filter_dialog_cancel">Annuler</string>
    <string name="dialog_date_picker_text">Choisissez une date</string>
    
    <string name="submenu_name">Nom</string>
    <string name="submenu_surname">Prenom</string>
    <string name="submenu_date">Date</string>
    <string name="submenu_sum">Montant</string>
    
    <string name="context_menu_edit">Editer</string>
    <string name="context_menu_delete">Supprimer</string>
    
    <string name="infos_name">Nom : </string>
    <string name="infos_surname">Prénom : </string>
    <string name="infos_credit">Crédit : </string>
    <string name="infos_dette">Dette : </string>
    
    <string name="horizontal_addfragment_placeholder_name">Nom</string>
    <string name="horizontal_addfragment_placeholder_surname">Prenom</string>
    <string name="horizontal_addfragment_placeholder_date">Date</string>
    <string name="horizontal_addfragment_placeholder_sum">Montant</string>
   

</resources>