<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_filter"
        android:title="@string/menu_filter">
        <menu>
            <item
		        android:id="@+id/submenu_filter_name"
		        android:title="@string/submenu_name" />
            <item
		        android:id="@+id/submenu_filter_surname"
		        android:title="@string/submenu_surname" />
            <item
		        android:id="@+id/submenu_filter_date"
		        android:title="@string/submenu_date" />
            <item
		        android:id="@+id/submenu_filter_sum"
		        android:title="@string/submenu_sum" />
        </menu>
    </item>
    
    <item
        android:id="@+id/menu_order"
        android:title="@string/menu_order">
        <menu>
            <item
		        android:id="@+id/submenu_order_name"
		        android:title="@string/submenu_name" />
            <item
		        android:id="@+id/submenu_order_surname"
		        android:title="@string/submenu_surname" />
            <item
		        android:id="@+id/submenu_order_date"
		        android:title="@string/submenu_date" />
            <item
		        android:id="@+id/submenu_order_sum"
		        android:title="@string/submenu_sum" />
        </menu>
    </item>

</menu>