<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical"
    android:layout_margin="5dip"
    android:padding="5dip" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/form_name"
		    android:layout_margin="3dip"
		    android:padding="3dip" />
		
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" >
            
        </EditText>
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/form_surname"
		    android:layout_margin="3dip"
		    android:padding="3dip" />
		
        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" >

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/form_sum"
		    android:layout_marginTop="10dip"
		    android:layout_marginLeft="3dip"
		    android:layout_marginRight="3dip"
		    android:layout_marginBottom="3dip"
		    android:padding="3dip" />
        
        <RadioGroup
               android:id="@+id/sumSign"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" >

               <RadioButton
                   android:id="@+id/plus"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:checked="true"
                   android:text="@string/form_plus" />

               <RadioButton
                   android:id="@+id/minus"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/form_minus" />
        </RadioGroup>

        <EditText
            android:id="@+id/sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </LinearLayout>
    
    <DatePicker 
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

		<Button
		    android:id="@+id/validate"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="2dip"
		    android:background="@android:color/black"
		    android:text="@string/form_button_add"
		    android:textColor="@android:color/white"
		    android:layout_weight="2" />
 
	    <Button
	        android:id="@+id/cancel"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="2dip"
	        android:background="@android:color/black"
	        android:text="@string/form_button_cancel"
	        android:textColor="@android:color/white"
		    android:layout_weight="2" />
 
        </LinearLayout>

</LinearLayout>