<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1" >
    
    <TableLayout
        android:id="@+id/layout_header"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:background="@android:color/darker_gray"
	    android:layout_alignParentTop="true"
	     >
	
	    <TableRow
	        android:id="@+id/header"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dip"
	        android:layout_margin="5dip" >
	        
	        <TextView 
		        android:id="@+id/header_name"
		        android:layout_height="match_parent"
		        android:layout_width="match_parent"
		        android:text="@string/header_name"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:textColor="@android:color/white"
		        android:textStyle="bold" />
	        
		    <TextView 
		        android:id="@+id/header_surname"
		        android:layout_height="match_parent"
		        android:layout_width="match_parent"
		        android:text="@string/header_surname"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:textColor="@android:color/white"
		        android:textStyle="bold" />
		    
		    <TextView 
		        android:id="@+id/header_sum"
		        android:layout_height="match_parent"
		        android:layout_width="match_parent"
		        android:text="@string/header_sum"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:textColor="@android:color/white"
		        android:textStyle="bold" />
		    
		    <TextView 
		        android:id="@+id/header_date"
		        android:layout_height="match_parent"
		        android:layout_width="match_parent"
		        android:text="@string/header_date"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:textColor="@android:color/white"
		        android:textStyle="bold" />
		    
	    </TableRow>
	
	</TableLayout>
    
	<ListView
	    android:layout_above="@id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/personListView" />
	
	<LinearLayout
	    android:id="@+id/layout_footer"
	    android:layout_alignParentBottom="true"
	    android:layout_above="@id/personListView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
		<Button 
		    android:id="@+id/footer_text"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:gravity="center_horizontal"
		    android:text="@string/default_listview_content"
		    android:paddingTop="12dip"
	        android:layout_margin="5dip" />
	</LinearLayout>
</RelativeLayout>
